conf/k8s/vaultsecretidfactory.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultsecretidfactory
spec:
  type: NodePort
  selector:
    app: vaultsecretidfactory
  ports:
  - port: 9090
    name: vaultsecretidfactory
    targetPort: http-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vaultsecretidfactory
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vaultsecretidfactory
    spec:
      containers:
      - name: vaultsecretidfactory
        image: allthingscloud/vaultsecretidfactory
        ports:
        - name: http-api
          containerPort: 8314
---
apiVersion: extensions/v1beta1
kind: Ingress 
metadata:
  name: vaultsecretidfactory-rules
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: vaultsecretidfactory.com
    http:
      paths:
      - path: /
        backend:
          serviceName: vaultsecretidfactory
          servicePort: 9090
